--- a/PA1_template.rmd
+++ b/PA1_template.rmd
@@ -13,9 +13,7 @@ output:
 ### Load packages
 
 ```{r load-packages, message = FALSE}
-library(ggplot2)
-library(dplyr)
-library(statsr)
+#None
 ```
 
 ## Loading and preprocessing the data
@@ -34,18 +32,52 @@ dataFull = read.csv("activity.csv", header=TRUE)
 For this part of the assignment, you can ignore the missing values in the dataset.
 
 1. Calculate the total number of steps taken per day
+```{r}
+spd <-aggregate(steps~date, dataFull, sum)
+head(spd)
+```
+
 
 2. If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day
+```{r}
+hist(spd$steps, 
+     xlab="Step Count", 
+     ylab="Num of Days", 
+     main="Total Number of Steps per Day",
+     col="orange",
+     breaks=c(0,2000,4000,6000,8000,10000,12000,14000,16000,18000,20000,22000),
+     xlim=c(0,25000))
+```
 
 3. Calculate and report the mean and median of the total number of steps taken per day
+```{r}
+c('Mean',mean(spd$steps))
+c('Median',median(spd$steps))
+```
+
 
 * * *
 
 ## What is the average daily activity pattern?
 
 1. Make a time series plot (i.e. \color{red}{\verb|type = "l"|}type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+```{r}
+avgSteps<-aggregate(steps~interval, dataFull, mean)
+with(avgSteps, plot(interval, 
+                    steps,
+                    col = "blue",
+                    xlab="time",
+                    ylab="steps",
+                    type = "l"))
+```
+
 
 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r}
+
+c('Interval with Max step average',avgSteps$interval[which.max(avgSteps[,2])])
+```
+
 
 * * *
 
@@ -54,12 +86,21 @@ For this part of the assignment, you can ignore the missing values in the datase
 Note that there are a number of days/intervals where there are missing values (coded as \color{red}{\verb|NA|}NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
 
 1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with \color{red}{\verb|NA|}NAs)
+```{r}
+
+```
 
 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
 
 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r}
+
+```
 
 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. 
+```{r}
+
+```
 
   4.a. Do these values differ from the estimates from the first part of the assignment? 
 
@@ -72,7 +113,11 @@ Note that there are a number of days/intervals where there are missing values (c
 For this part the \color{red}{\verb|weekdays()|}weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
 
 1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+```{r}
+
+```
 
 2. Make a panel plot containing a time series plot (i.e. \color{red}{\verb|type = "l"|}type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
+```{r}
 
-
+```
